--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
             <input name="precio" id="precio" type="text" required>
             <label for="cantidad">Cantidad:</label>
             <input name="cantidad" id="cantidad" type="text" required>
-            <button onclick="add_productos(), get_productos()">Guardar</button>
+            <button onclick="add_productos()">Guardar</button>
         </form>
     </div>
 
