--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
                     Login
                 </div>
                 
-                <form action="/index" method="GET" id="loginform">
+                <form action="/verificar" method="POST" id="loginform">
                     
                     <input type="email" name="correo" placeholder="Ingresar correo" required>
 
